0.6.0
-----
- :authorized-routes => :unsecured-routes
	- should be a bidi route map to :ok handlers (enforced on system start)
	- top level files are always unsecured
	- to unsecure a whole sub-route (eg: the js folder)
		use bidi's catch-all routes, eg: `{"/js" {true :ok}}`
- Open id mock will now deal with multiple users.
	"user" can be passed as a query param to the open id mock endpoint.
- Fixing heisenbugs wrt datomic not sorting & protocol-testing randomly failing
- Adding invalid-token-handler to the :openid config
	- Takes a request whenever an invalid token
		is passed to a secured-route (ie: not an unsecured-route)
		and should return whether the request should be allowed
		to flow through the handler stack (defaults to false)
- Removing specter => clojure.walk

0.5.1
-----
- Logging the config on start
- Upgraded specter to 0.11.0

0.5.0
-----
- :extra-routes handlers are now of type (fn [env match] res)
	the :request is in the env
- access-token-handler looks for :client_id if :sub is not present

0.4.8
-----
- Added stack traces to server parsing error logging
- Updated dependencies
- Added server settings to log message of webserver start
- Removed dev environ

0.4.7
-----
- Added build-test-mock-openid-server to grab openid config and put into the
	server parser env when protocol testing. The component should be placed
	under the key :test-openid-mock and have information under :openid-mock/claims
	that gets placed in env [:request :user].
- check-response-to-client's :on-success callback now has a :remap-fn in its env
	which is a function to remap a response from real ids to the fake (keyword) ids
	eg: :datomic.id/* & :om.tempid/*
- check-response-to-client now takes an optional :which-db which is a keyword
	that specifies from which db a response originates from.
	This is because :db/id's are not unique across datomic databases.

0.4.5
-----
- Removed default logger configuration
- Moved GELF logger to an optional compoent